Update categories navigation

--- a/simi-home/template.html
+++ b/simi-home/template.html
@@ -26,6 +26,7 @@
         <link rel="preconnect" href="<%= process.env.MAGENTO_BACKEND_URL %>">
         <link rel="stylesheet" href="/static/bootstrap.min.css">
         <link rel="stylesheet" href="/static/style.css">
+        <script src="/static/jquery.min.js"></script>
 
         <style type="text/css">
             /* vietnamese */
